--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,8 +5,20 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[dependencies]
-# https://docs.rs/fern/0.6.2/fern/
+[features]
+default = []
+db_log = ["db_logger"]
 
-[[fern]]
-version = "0.6.2"
+[dependencies]
+
+md-5 = "0.10.6"
+sha1 = "0.10.6"
+
+zstd = "0.13.0"
+
+log = "0.4.20"
+[dependencies.db_logger]
+version = "0.1"
+optional = true
+default-features = false
+features = ["postgres"]
