--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,8 +17,8 @@ sha1 = "0.10.6"
 zstd = "0.13.0"
 
 log = "0.4.20"
-[dependencies.db_logger]
-version = "0.1"
-optional = true
-default-features = false
-features = ["postgres"]
+# [dependencies.db_logger]
+# version = "0.1"
+# optional = true
+# default-features = false
+# features = ["postgres"]
