--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,14 +2,21 @@
 name = "openbmclapi_rs"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
 default = []
-db_log = ["db_logger"]
+# db_log = ["db_logger"]
 
 [dependencies]
+
+axum = "0.7.4"
+tokio = { version = "1.35.1", features = ["full"] }
+
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 
 md-5 = "0.10.6"
 sha1 = "0.10.6"
