--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,7 @@ tokio = { version = "1.35.1", features = ["full"] }
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 toml = "0.8.8"
+apache-avro = "0.16.0"
 
 md-5 = "0.10.6"
 sha1 = "0.10.6"
