--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,9 @@ sha1 = "0.10.6"
 zstd = "0.13.0"
 
 log = "0.4.20"
-simple_logger = "4.3.3"
+[dependencies.simple_logger]
+version = "4.3.3"
+features = ["colors", "threads", "timestamps", "stderr"]
 # [dependencies.db_logger]
 # version = "0.1"
 # optional = true
