--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [features]
-default = []
+default = ["local_test"]
+local_test = []
 # db_log = ["db_logger"]
 
 [dependencies]
