--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,5 @@ sha1 = "0.10.6"
 
 zstd = "0.13.0"
 
-log = "0.4.20"
-[dependencies.simple_logger]
-version = "4.3.3"
-features = ["colors", "threads", "timestamps"]
-# [dependencies.db_logger]
-# version = "0.1"
-# optional = true
-# default-features = false
-# features = ["postgres"]
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["time"] }
