--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,3 +28,6 @@ zstd = "0.13.0"
 
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["time"] }
+
+chrono = "0.4.33"
+base64 = "0.21.7"
