--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ local_test = []
 reqwest = { version = "0.11.23", features = ["json"] }
 axum = "0.7.4"
 tokio = { version = "1.35.1", features = ["full"] }
+futures-util = "0.3.30"
+rust_socketio = { path = "D:/githubs/rust-socketio/socketio", features = ["async"]}
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.112"
