--- a/tests/socket-test/Cargo.toml
+++ b/tests/socket-test/Cargo.toml
@@ -12,3 +12,6 @@ rust_socketio = { path = "D:/githubs/rust-socketio/socketio", features = ["async
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.112"
 toml = "0.8.8"
+
+tracing = "0.1.40"
+tracing-subscriber = { version = "0.3.18", features = ["time"] }
