--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ reqwest = { version = "0.11.23", features = ["json"] }
 axum = "0.7.4"
 tokio = { version = "1.35.1", features = ["full"] }
 futures-util = "0.3.30"
-rust_socketio = { path = "D:/githubs/rust-socketio/socketio", features = ["async"]}
+rust_socketio = { version = "0.4.4", features = ["async"]}
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.112"
@@ -34,3 +34,6 @@ tracing-subscriber = { version = "0.3.18", features = ["time"] }
 
 chrono = "0.4.33"
 base64 = "0.21.7"
+
+[patch.crates-io]
+rust_socketio = { git = "https://github.com/shenjackyuanjie/rust-socketio.git", branch = "mult_payload" }
