--- a/tests/socket-test/Cargo.toml
+++ b/tests/socket-test/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 
 [dependencies]
 
-rust_socketio = { path = "D:/githubs/rust-socketio/socketio", features = ["async"]}
+rust_socketio = { version = "0.4.4", features = ["async"]}
 
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.112"
@@ -15,3 +15,6 @@ toml = "0.8.8"
 
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = ["time"] }
+
+[patch.crates-io]
+rust_socketio = { git = "https://github.com/shenjackyuanjie/rust-socketio.git", branch = "mult_payload" }
